deps/v8/test/message/fail/strict-octal-use-strict-after.out
*%(basename)s:33: SyntaxError: Octal escape sequences are not allowed in strict mode.
  "use\040strict";
       ^^
SyntaxError: Octal escape sequences are not allowed in strict mode.
